headquarter/base/worldmap-front/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: worldmap-front
    app.kubernetes.io/component: worldmap-front
    app.kubernetes.io/instance: worldmap-front
    app.kubernetes.io/name: worldmap-front
    app.kubernetes.io/part-of: worldmap-front
    app.openshift.io/runtime-version: latest
  name: worldmap-front
spec:
  ports:
  - name: 8080-tcp
    port: 8080
  - name: 8443-tcp
    port: 8443
  selector:
    app: worldmap-front
    deployment: worldmap-front
