headquarter/base/worldmap-front/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: worldmap-front
    app.kubernetes.io/component: worldmap-front
    app.kubernetes.io/instance: worldmap-front
    app.kubernetes.io/name: worldmap-front
    app.kubernetes.io/part-of: worldmap-front
    app.openshift.io/runtime-version: latest
  name: worldmap-front
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: worldmap-front
    weight: 100
  wildcardPolicy: None
